This Patch fixes Bug 241641 which causes the current engine to be not up-to-date after startup when a should continue playing. Now the current track and the albums applet show the right information just after startup.

Patch by Conrad Hübler, thanks!

BUG: 241641